--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.17.5",
     "@tanstack/react-form": "^1.23.7",
+    "@tanstack/zod-form-adapter": "^0.42.1",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "encyrpt-decrypt-env": "^1.0.10",
@@ -20,7 +21,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
